crates/harness-tui/tests/snapshots/startup_polish_test__startup_content_stacked.snap
---
source: crates/harness-tui/tests/startup_polish_test.rs
expression: "normalized_startup_snapshot(&app, width, height)"
---

  <cwd-breadcrumb>

          Harness <version>

           New worktree                                        ctrl+w
           Resume session                                      ctrl+s
           Changelog
           Quit                                                ctrl+q

          Changelog
          • Structural Markdown preserves nested styles, code
          indentation, tables and math.
          • Browse transcript entries and recorded tool output in a
          searchable full view.
          • The session dashboard keeps replies editable while new
          events arrive.

  ╭──────────────────────────────────────────────────────────────────────────╮
  │ ❯                                                                        │
  ╰──────────────────────────────────────────────────────────────────────────╯

                                               Provider not connected  │  Beta
