crates/harness-tui/tests/snapshots/startup_polish_test__startup_reveal_compact_affordances.snap
---
source: crates/harness-tui/tests/startup_polish_test.rs
expression: snapshot
---

  <cwd-breadcrumb>





               Harness 0.1.0
               Thanks for trying Harness, give feedback with /fee…
                New worktree                               ctrl+w
                Resume session                             ctrl+s
                Changelog
                Quit                                       ctrl+q





  ╭──────────────────────────────────────────────────────────────────────────╮
  │ ❯                                                                        │
  ╰───────────────────────────────────────────────────────────────────────  ─╯

                                               Provider not connected  │  Beta
