crates/harness-tui/tests/snapshots/startup_polish_test__startup_reveal_compact_mark.snap
---
source: crates/harness-tui/tests/startup_polish_test.rs
expression: snapshot
---

  <cwd-breadcrumb>





               Harness










  ╭──────────────────────────────────────────────────────────────────────────╮
  │ ❯                                                                        │
  ╰───────────────────────────────────────────────────────────────────────  ─╯

                                               Provider not connected  │  Beta
