crates/harness-tui/tests/snapshots/startup_polish_test__startup_reveal_wide_identity.snap
---
source: crates/harness-tui/tests/startup_polish_test.rs
assertion_line: 392
expression: snapshot
---

  <cwd-breadcrumb>




   ╭────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮
   │                                                                                                                │
   │  ██╗  ██╗         Harness     0.1.0                                                                            │
   │  ██║  ██║         Thanks for trying Harness, give feedback with /feedback!                                     │
   │  ██║  ██║                                                                                                      │
   │  ███████║                                                                                                      │
   │  ██╔══██║                                                                                                      │
   │  ██║  ██║                                                                                                      │
   │  ╚═╝  ╚═╝                                                                                                      │
   │                                                                                                                │
   ╰────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯









  ╭──────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮
  │ ❯                                                                                                                │
  ╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯

                                                                                       Provider not connected  │  Beta
