crates/harness-tui/tests/snapshots/startup_polish_test__startup_reveal_wide_mark.snap
---
source: crates/harness-tui/tests/startup_polish_test.rs
assertion_line: 392
expression: snapshot
---

  <cwd-breadcrumb>




   ╭────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮
   │                                                                                                                │
   │  ██╗  ██╗                                                                                                      │
   │  ██║  ██║                                                                                                      │
   │  ██║  ██║                                                                                                      │
   │  ███████║                                                                                                      │
   │  ██╔══██║                                                                                                      │
   │  ██║  ██║                                                                                                      │
   │  ╚═╝  ╚═╝                                                                                                      │
   │                                                                                                                │
   ╰────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯









  ╭──────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮
  │ ❯                                                                                                                │
  ╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯

                                                                                       Provider not connected  │  Beta
